--- a/flip-card.html
+++ b/flip-card.html
@@ -158,7 +158,7 @@ body{
           }
         }else{
           $(".card").removeClass("active")
-          alert("在試試吧");
+          alert("再試試吧");
         }
       }
 
