--- a/accordion.html
+++ b/accordion.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>手風琴展示</title>
+    <title>手風琴動畫</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -68,7 +68,12 @@
     </style>
 </head>
   <body>
+  
       <div class="container">
+            <h1>手風琴動畫</h1> 
+            <br>
+            <a href="index.html"><button type="button" class="btn btn-primary" >回到首頁</button></a> 
+           <hr>
           <div class=" position-absolute">
              <div class="wrapper d-flex position-relative ">
                  
