--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <div class="media-body">
                 <h5 class="mt-0 mb-1">翻牌配對遊戲(JQuery)</h5>
                 運用click 改變class的樣式，呈現配對正確出現"恭喜!恭喜"提示，配對錯誤出現"再試試吧"。
-               <a href="accordion.html"> <button type="button" class="btn btn-primary"  >前往網站</button></a>
+               <a href="fllip-card.html"> <button type="button" class="btn btn-primary"  >前往網站</button></a>
               </div>
             </li>
             <hr class="my-4">
