--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
   } */
   .myphoto{
     margin-left:100px;
-    padding: 10px;
     background-color: rosybrown;
-
 
   }
   .myphoto2{
-    width: 330px;
+    width: 70%;
     display:block; 
     margin:auto;
  
@@ -49,12 +47,12 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">Sophia 作品集</span></a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">RWD</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">JQuery</a>
-            </li>
+            </li> -->
          
 
         </div>
@@ -73,8 +71,8 @@
             <p class="lead fw-normal">
               <ul class="list">
                 <li>經歷:中壢資策會-前端工程師就業養成班<br>(APR. 2020 - JAN.2021)</li>
-                <li>程式語言:HTML5、 CSS3、 JavaScript、ES6、SCSS、JQuery</li>
-                <li>框架:React.js、Bootstap4、5</li>
+                <li>前端:HTML5、 CSS3、 JavaScript、ES6、SCSS、JQuery</li>
+                <li>框架:React.js(HOOK)、Bootstap4、5</li>
                 <li>可獨立切版、完成RWD網頁</li>
                 <li>後端:Node.js、PHP</li>
                 <li>資料庫:My SQL</li>
@@ -104,7 +102,7 @@
               與5位開發者合作，一同建立揪影平臺。
               使用React.js & Node.js 前後端分離開發，資料庫規劃、API 結構設計到購物車，共花費5週時間完成。
               負責:會員中心(會員資料、我的收藏、我的相簿、歷史紀錄、折價券...等)及會員顯示頁。
-              <p style="color:sienna;">*影片為資策會期末現場直播(僅剪輯我的部分)</p>
+              <p style="color:sienna;">*影片為資策會期末現場直播(僅剪輯個人的部分)</p>
              <!-- <a href="bootstrap & CSS/hairmap.com RWD.html"> <button type="button" class="btn btn-primary"  >前往網站</button></a> -->
             </div>
           <hr class="my-4">
