--- a/get_mail_game/game.html
+++ b/get_mail_game/game.html
@@ -43,8 +43,8 @@
          -->
     </div> 
     <br>
-    <a href="https://sophia0110.github.io/Portfolio/" ><button type="button" class="btn btn-primary" >回到首頁</button></a>
-    <a href="https://sophia0110.github.io/Portfolio/ " target="_blank"><button type="button" class="btn btn-secondary" >詳細的code</button></a> 
+    <a href="https://sophia0110.github.io/Portfolio/" target="_blank"><button type="button" class="btn btn-primary" >回到首頁</button></a>
+    <a href="https://github.com/sophia0110/get_mail_game" target="_blank"><button type="button" class="btn btn-secondary" >詳細的code</button></a> 
     <a href="https://www.google.com/doodles/155th-anniversary-of-the-pony-express" target="_blank"><button type="button" class="btn btn-info" >參考範例</button></a>  
    <hr>
     
