--- a/fllip-card.html
+++ b/fllip-card.html
@@ -1,176 +1,182 @@
 <!DOCTYPE html>
 <html lang="">
-<head>
-  <meta charset="UTF-8">
-  <title>翻牌遊戲</title>
-</head>
-<style>
-body{
-  margin:50px;
-}
+  <head>
+    <meta charset="UTF-8" />
+    <title>翻牌遊戲</title>
+  </head>
+  <style>
+    body {
+      margin: 50px;
+    }
 
-.box img{
-  width:300px;
-}
-.card{
-  position: relative;
-  transform-style:preserve-3d;
-  float:left;
-  margin: 0 20px 20px;
-  width:200px;
-  height:280px; 
-  /*height:400px;*/
-}
-.card.active{
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-}
-.card.yes{
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-}
-.card img{
-  width:100%;
-  position: absolute;
-  left:0;
-  top:0;
-  display: block;
-  -webkit-backface-visibility: hidden;  
-  backface-visibility: hidden;
-  border-radius: 10px;
-  overflow: hidden;
-}
-.front{
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-}
-.back{
-  transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-}
+    .box img {
+      width: 300px;
+    }
+    .card {
+      position: relative;
+      transform-style: preserve-3d;
+      float: left;
+      margin: 0 20px 20px;
+      width: 200px;
+      height: 280px;
+      /*height:400px;*/
+    }
+    .card.active {
+      transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+    }
+    .card.yes {
+      transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+    }
+    .card img {
+      width: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      display: block;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+      border-radius: 10px;
+      overflow: hidden;
+    }
+    .front {
+      transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+    }
+    .back {
+      transform: rotateY(0deg);
+      -webkit-transform: rotateY(0deg);
+    }
 
-.transition{
-  transition: all .5s;
-  -webkit-transition: all .5s;
-}
-.box:hover{
-  transform:rotateY(180deg);
-  -webkit-transform:rotateY(180deg);
-}
-</style>
-<body>
-  <h1>翻牌配對遊戲</h1>
-  <br>
-  <a href="index.html"><button type="button" class="btn btn-primary" >回到首頁</button></a> 
- <hr>
-  <div class="container">
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front strange" src="images/15.jpg" alt="15">
+    .transition {
+      transition: all 0.5s;
+      -webkit-transition: all 0.5s;
+    }
+    .box:hover {
+      transform: rotateY(180deg);
+      -webkit-transform: rotateY(180deg);
+    }
+  </style>
+  <body>
+    <h1>翻牌配對遊戲</h1>
+    <br />
+    <a href="index.html"
+      ><button type="button" class="btn btn-primary">回到首頁</button></a
+    >
+    <hr />
+    <div class="container">
+      <div class="card transition">
+        <img class="back" />
+        <img class="front strange" src="images/15.jpg" alt="15" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/11.jpg" alt="11" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/11.jpg" alt="11" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/12.jpg" alt="12" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/13.jpg" alt="13" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/12.jpg" alt="12" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/14.jpg" alt="14" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/13.jpg" alt="13" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/14.jpg" alt="14" />
+      </div>
+      <div class="card transition">
+        <img class="back" />
+        <img class="front" src="images/15.jpg" alt="15" />
       </div>
     </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front" src="images/11.jpg" alt="11">
-      </div>
-    </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/11.jpg" alt="11">
-      </div>
-    </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/12.jpg" alt="12">
-      </div>
-    </div>
-
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/13.jpg" alt="13">
-      </div>
-    </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/12.jpg" alt="12">
-      </div>
-    </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/14.jpg" alt="14">
-      </div>
-    </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/13.jpg" alt="13">
-      </div>
-    </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/14.jpg" alt="14">
-      </div>
-    </div>
-    <div class="card transition">
-      <div class="card_wrap">
-        <img class="back" src="images/card.jpg">
-        <img class="front " src="images/15.jpg" alt="15">
-      </div>
-    </div>
-  </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <script>
-    
-    let count = [];
-    let card1="1";
-    let card2="2";
- 
-    $(".card").click(function(){
-      count++;
-      $(this).toggleClass("active");
-      if($(".card.active").length%2==1){
-        card1=$(this).find(".front").attr("src")
-             console.log("card1: "+card1)
-      }else{
-        card2=$(this).find(".front").attr("src")
-             console.log("card2: "+card2) 
-             setTimeout(removeClass,1000)
-      }
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      let count = [];
+      let card1 = "1";
+      let card2 = "2";
+      // let front = [
+      //   "images/11.jpg",
+      //   "images/11.jpg",
+      //   "images/12.jpg",
+      //   "images/12.jpg",
+      //   "images/13.jpg",
+      //   "images/13.jpg",
+      //   "images/14.jpg",
+      //   "images/14.jpg",
+      //   "images/15.jpg",
+      //   "images/15.jpg",
+      // ];
+      // var myCard = "";
+      // var allCard = front.length;
+      // for (let i = 0; i < allCard; i++) {
+      //   console.log(i);
+      //   var myCard = front.pop();
+      //   console.log(myCard);
+      //   $(".front").attr("src", myCard);
+      // }
 
-    })
+      $(".back").attr("src", "images/card.jpg");
+      $(".card").click(function () {
+        count++;
+        $(this).toggleClass("active");
+        if ($(".card.active").length % 2 == 1) {
+          card1 = $(this).find(".front").attr("src");
+          console.log("card1: " + card1);
+        } else {
+          card2 = $(this).find(".front").attr("src");
+          console.log("card2: " + card2);
+          setTimeout(removeClass, 1000);
+        }
+      });
 
-    function removeClass(){
-        if(card1==card2){
-          $(".active").addClass("yes")
-          $(" .card").removeClass("active")
+      function removeClass() {
+        if (card1 == card2) {
+          $(".active").addClass("yes");
+          $(".card").removeClass("active");
           alert("恭喜!恭喜!");
-  
-          if(($(" .yes").length)%2==1){
-            $(".card").removeClass("yes")
+
+          if ($(".yes").length % 2 == 1) {
+            $(".card").removeClass("yes");
           }
-        }else{
-          $(".card").removeClass("active")
+        } else {
+          $(".card").removeClass("active");
           alert("再試試吧");
         }
       }
-
-
-
-      </script>
-
+    </script>
   </body>
 </html>
-
-
