--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>   
-<html lang="en">
+<html lang="zh-Hant-TW">
   <head>
     <title>Sophia 作品集</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" href="/images/ux.png" type="image/x-icon">
+  <link rel="shortcut icon" href="./images/ux.png" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" media="screen" />
