--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
     <link rel="stylesheet" href="./owlcarousel/owl.theme.default.min.css">
     <link rel="stylesheet" href="./css/news.css" media="screen" />
 <style>
-  .img0{
+  
+   .img0{
     width: 40vw;
     height: 20vw;
   }
   .projectImg{
-    width: 16vw;
-    height: 10vw;
-
+    width: 100%;
   }
   
   .list{
@@ -75,16 +74,6 @@
         <h4>參與專案</h4>
         <div class=" row">
           <div class="col-3">
-            <h5><a href="https://www.map8.zone/" target="_blank">map8官網</a></h5>
-            <img src="images/map8.jpg" class="mr-3 projectImg" alt="...">
-            <p>地圖平台前端功能維護</p>
-            <p>地圖平台新功能研發</p>
-            <p>資料視覺化、向量地圖運用功能</p>
-            <p>圖資運用、地理運算</p>
-            <p> 地點/門牌搜尋 API 介接</p>
-            <p>客製化專案</p>
-            </div>
-          <div class="col-3">
             <h5> <a href="https://www.map8.zone/address-standardization/index.html" target="_blank">某公司內部地址正規化網頁</a></h5>
             <img src="images/地址正規化系統.png" class="mr-3 projectImg" alt="...">
             <p>串接地址正規化API</p>
@@ -96,13 +85,25 @@
             <img src="images/原民會.jpg" class="mr-3 projectImg" alt="...">
             <p>無障礙網頁</p>
             <p>前後臺串聯</p>
+            <p>串接API</p>
             <p>後臺系統</p>
            </div>
             <p></p>
+            <div class="col-3">
+              <h5><a href="https://www.map8.zone/" target="_blank">map8官網</a></h5>
+              <img src="images/map8.jpg" class="mr-3 projectImg" alt="...">
+              <p>地圖平台前端功能維護</p>
+              <p>地圖平台新功能研發</p>
+              <p>資料視覺化、向量地圖運用功能</p>
+              <p>圖資運用、地理運算</p>
+              <p> 地點/門牌搜尋 API 介接</p>
+              <p>客製化專案</p>
+              </div>
             <div class="col-3">           
               <h5> <a href="https://househunt.land.gov.taipei/" target="_blank">台北找房+</a></h5>
               <img src="images/地政局.jpg" class="mr-3 projectImg" alt="...">
             <p>部分項目切版</p>
+            <p>經由連結開啟指定社區詳細頁</p>
             </div>
         </div>
 
