--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
             <p class="lead fw-normal">
               <ul class="list">
                 <li>經歷:中壢資策會-前端工程師就業養成班(APR. 2020 - JAN.2021)</li>
-                <li>     研鼎智能股份有限公司- 前端工程師(JUN. 2021 - )</li>
-                <li>前端:HTML5、CSS3、JavaScript、SCSS、JQuery、Bootstap</li>
-                <li>後端:Node.js、PHP</li>
-                <li>框架:React.js(HOOK)、Yii</li>
-                <li>可獨立切版、完成RWD網頁</li>
+                <li>     研鼎智能股份有限公司- 前端工程師(JUN. 2021 - Aug .2022)</li>
+                <li>     緯創資通股份有限公司- 前端工程師(Aug .2022 - 現在)</li>
+                <li>可獨立切版完成網頁、RWD</li>
+                <li>前端框架:Next.js、React.js、Angular.js</li>
+                <li>UI及CSS:Tailwind css、Chakra UI、Ant Design</li>
+                <li>後端:Node.js</li>
+                <li>軟體套件管理系統:pnpm 、npm 、yarn </li>
                 <li>資料庫:MySQL、pgSQL</li>
-                <li>軟體套件管理系統:npm 、yarn</li>
                 <li>Linux系統及Docker </li>
               </ul>
                  </p>
